tests/negative/test_expr_deref_ptr.orb
fnc main() {
    let i32 x;
    let ptr p = ptr(&x);
    *p;
}